tests/libtracker-data/error/update-error-query-1.rq
SELECT ?s ?o
WHERE {
	?s rdf:value ?o
}

